--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# ignoring the /tmp file used for avatars
+tmp/*
+!tmp/.gitkeep
 
 # Created by https://www.toptal.com/developers/gitignore/api/node,vim,code,linux,yarn,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,vim,code,linux,yarn,macos
